--- a/src/SyncMe/SyncMe/SyncMe/Views/NamespaceManagmentPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/NamespaceManagmentPage.xaml
@@ -65,7 +65,7 @@
                                         </Grid.ColumnDefinitions>
                                         <Button ImageSource="icon_arrow.xml" Style="{StaticResource MinorButtonStyle}" Command="{Binding ExpandClick}" Rotation="{Binding ArrowRotation}" IsVisible="{Binding HasChildren}" Grid.Column="0"/>
                                         <Label Text="{Binding Name}" Style="{StaticResource NamespaceStyle}" Grid.Column="1"/>
-                                        <Button ImageSource="icon_plus_minor.xml" Style="{StaticResource MinorButtonStyle}" Grid.Column="2"/>
+                                        <Button ImageSource="icon_plus_minor.xml" Style="{StaticResource MinorButtonStyle}" Grid.Column="2" Command="{Binding NewItemClick}"/>
                                     </Grid>
                                     <Label Text="Turn off until..." IsVisible="{Binding IsSuspendButtonsVisible}" HorizontalTextAlignment="Center"/>
                                     <Grid>
