#changed icons; renamed calendarproviders project;

--- a/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
@@ -3,19 +3,33 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:SyncMe"
        xmlns:views="clr-namespace:SyncMe.Views"
-       x:Class="SyncMe.AppShell"
-       BackgroundColor="#39c2d7">
+       x:Class="SyncMe.AppShell">
     <!-- Display a bottom tab bar containing two tabs -->
+    <Shell.Resources>
+        <Style x:Key="BaseStyle" TargetType="Element">
+            <Setter Property="Shell.BackgroundColor" Value="{StaticResource epamBlue}" />
+            <Setter Property="Shell.ForegroundColor" Value="White" />
+            <Setter Property="Shell.TitleColor" Value="{StaticResource epamGrey}" />
+            <Setter Property="Shell.DisabledColor" Value="{StaticResource epamGrey}" />
+            <Setter Property="Shell.UnselectedColor" Value="{StaticResource epamGrey}" />
+            <Setter Property="Shell.TabBarUnselectedColor" Value="White" />
+        </Style>
+    </Shell.Resources>
     <TabBar>
         <ShellContent Title="Calendar"
                       Icon="icon_open_calendar.png"
                       ContentTemplate="{local:DIDataTemplate Type={x:Type views:CalendarPage}}"
-                      Route="calendar"/>
+                      Route="calendar"
+                      Style="{StaticResource BaseStyle}"/>
         <ShellContent Title="Namespaces"
-                      Icon="icon_feed.png"
-                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:NamespaceManagmentPage}}"/>
+                      Icon="icon_namespaces.png"
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:NamespaceManagmentPage}}"
+                      Route="namespace"
+                      Style="{StaticResource BaseStyle}"/>
         <ShellContent Title="Identities"
-                      Icon="icon_feed.png"
-                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:IdentityProvidersPage}}"/>
+                      Icon="icon_identities.png"
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:IdentityProvidersPage}}"
+                      Route="identities"
+                      Style="{StaticResource BaseStyle}"/>
     </TabBar>
 </Shell>
