#added style to identity page

--- a/src/SyncMe/SyncMe/SyncMe/Views/IdentityProvidersPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/IdentityProvidersPage.xaml
@@ -16,14 +16,23 @@
                 <Setter Property="TextColor" Value="{StaticResource epamGrey}"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
                 <Setter Property="VerticalOptions" Value="Center"/>
-                <Setter Property="Margin" Value="20,7,0,0" />
+                <Setter Property="Margin" Value="20,7,0,0"/>
                 <Setter Property="Padding" Value="5"/>
             </Style>
             <Style x:Key="SyncButton" TargetType="Button">
                 <Setter Property="CornerRadius" Value="100"/>
-                <Setter Property="HeightRequest" Value="20"/>
-                <Setter Property="WidthRequest" Value="20"/>
-                <Setter Property="Margin" Value="0,12,20,0" />
+                <Setter Property="HeightRequest" Value="35"/>
+                <Setter Property="WidthRequest" Value="35"/>
+                <Setter Property="Margin" Value="0,12,20,0"/>
+                <Setter Property="ImageSource" Value="icon_profile_sync.png"/>
+                <Setter Property="BackgroundColor" Value="White"/>
+            </Style>
+            <Style x:Key="FrameStyle" TargetType="Frame">
+                <Setter Property="CornerRadius" Value="10"/>
+                <Setter Property="Padding" Value="10"/>
+                <Setter Property="WidthRequest" Value="200"/>
+                <Setter Property="Margin" Value="8,8,8,8"/>
+                <Setter Property="BorderColor" Value="{StaticResource epamBlue}"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -35,17 +44,19 @@
     <ContentPage.Content>
         <AbsoluteLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
             <StackLayout>
-                <FlexLayout Direction="Column">
-                    <ListView ItemsSource="{Binding Identities}">
+                <FlexLayout Direction="Column" JustifyContent="Center">
+                    <ListView ItemsSource="{Binding Identities}" SelectionMode="None" HasUnevenRows="True">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
-                                    <StackLayout>
-                                        <FlexLayout JustifyContent="SpaceBetween">
-                                            <Label Text="{Binding Name}" Style="{StaticResource IdentityStyle}"/>
-                                            <Button Clicked="OnSyncClicked" CommandParameter="{Binding .}" Style="{StaticResource SyncButton}" />
-                                        </FlexLayout>
-                                    </StackLayout>
+                                    <Frame Style="{StaticResource FrameStyle}">
+                                        <StackLayout>
+                                            <FlexLayout JustifyContent="SpaceBetween">
+                                                <Label Text="{Binding Name}" Style="{StaticResource IdentityStyle}"/>
+                                                <Button Clicked="OnSyncClicked" CommandParameter="{Binding .}" Style="{StaticResource SyncButton}" />
+                                            </FlexLayout>
+                                        </StackLayout>
+                                    </Frame>
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
