--- a/src/SyncMe/SyncMe/SyncMe/Views/CalendarPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/CalendarPage.xaml
@@ -31,8 +31,6 @@
                 <Setter Property="WidthRequest" Value="64"/>
                 <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
                 <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
-                <Setter Property="Padding" Value="15"/>
-                <Setter Property="Margin" Value="0,13,10,0"/>
             </Style>
             <Style x:Key="CalendarStyle" TargetType="controls:Calendar">
                 <Setter Property="SelectedDateColor" Value="{StaticResource epamBlue}"/>
@@ -46,8 +44,10 @@
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-
-    <Grid>
+    
+    <AbsoluteLayout>
+        <StackLayout>
+        <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="7*" />
             <ColumnDefinition Width="2*"/>
@@ -55,7 +55,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="9*"/>
-            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0"  Grid.Column="0" Text="Alarm sound:"  Style="{StaticResource NotificationStyle}"></Label>
         <Switch 
@@ -64,7 +63,7 @@
             x:Name="NotificationsSwitcher" 
             Style="{StaticResource ToggleButtonStyle}"
             IsToggled="{Binding NotificationsSwitcher}"/>
-        <controls:Calendar 
+            <controls:Calendar 
             x:Name="Calendar1"
             Grid.Row="1"  
             Grid.Column="0" 
@@ -73,25 +72,30 @@
             DayTappedCommand="{Binding DayTappedCommand}"
             Style="{StaticResource CalendarStyle}"
             >
-            <controls:Calendar.EventTemplate>
-                <DataTemplate>
-                    <StackLayout
+                <controls:Calendar.EventTemplate>
+                    <DataTemplate>
+                        <StackLayout
                     Padding="15,0,0,0">
-                        <Label Text="{Binding StartDate}"
+                            <Label Text="{Binding StartDate}"
                        Style="{StaticResource TimeStyle}"/>
-                        <Label Text="{Binding Name}"
+                            <Label Text="{Binding Name}"
                        Style="{StaticResource TitleStyle}"/>
-                        <Label Text="{Binding Description}"
-                       Style="{StaticResource NotificationStyle}"/>
-                    </StackLayout>
-                </DataTemplate>
-            </controls:Calendar.EventTemplate>
-        </controls:Calendar>
+                            <Label Text="{Binding Description}"
+                       Style="{StaticResource TitleStyle}"/>
+                        </StackLayout>
+                    </DataTemplate>
+                </controls:Calendar.EventTemplate>
+            </controls:Calendar>
+        </Grid>
+        </StackLayout>
+
         <Button x:Name="AddEvent"
             ImageSource="icon_add_calendar.png"
-            Grid.Row="2"  
-            Grid.Column="1"
             BackgroundColor="White"
-            Style="{StaticResource FloadButtonStyle}"/>
-    </Grid>
+            Style="{StaticResource FloadButtonStyle}"
+            AbsoluteLayout.LayoutBounds="0.93, 0.94, 50, 50"
+            AbsoluteLayout.LayoutFlags="PositionProportional"  
+                />
+    </AbsoluteLayout>
+
 </ContentPage>
