--- a/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
+++ b/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SyncMe.Views.CalendarPage"
              xmlns:controls="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar" 
-             Title="Calendar"
-             >
+             Title="Calendar" >
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="NotificationStyle" TargetType="Label">
@@ -61,6 +60,14 @@
                 <Setter Property="BorderColor" Value="{StaticResource epamBlue}"/>
                 <Setter Property="Margin" Value="8,8,8,8"/>
             </Style>
+            <Style x:Key="MinorButtonStyle" TargetType="Button">
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="HorizontalOptions" Value="Center"/>
+                <Setter Property="WidthRequest" Value="20"/>
+                <Setter Property="HeightRequest" Value="20"/>
+                <Setter Property="CornerRadius" Value="100"/>
+                <Setter Property="BackgroundColor" Value="White"/>
+            </Style>
 
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -78,8 +85,8 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="20*"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0"  Grid.Column="0" Text="Sound"  Style="{StaticResource NotificationStyle}"></Label>
-                <Label Grid.Row="0"  Grid.Column="1" Text="Theme"  Style="{StaticResource ThemeStyle}"></Label>
+                <Label Grid.Row="0" Grid.Column="0" Text="Sound"  Style="{StaticResource NotificationStyle}"></Label>
+                <Label Grid.Row="0" Grid.Column="1" Text="Theme"  Style="{StaticResource ThemeStyle}"></Label>
 
                 <Label Grid.Row="1" FontSize="Medium" Style="{StaticResource YearMonthStyle}" Grid.Column="0" Grid.ColumnSpan="2" x:Name="year"  HorizontalOptions="Center" IsVisible="{Binding CalendarSectionShown}">
                     <Label.FormattedText>
@@ -92,17 +99,16 @@
                 </Label>
 
                 <controls:Calendar 
-            x:Name="Calendar1"
-            Grid.Row="2"  
-            Grid.Column="0" 
-            Grid.ColumnSpan="2"
-            Events="{Binding Events}"
-            DayTappedCommand="{Binding DayTappedCommand}"
-            Style="{StaticResource CalendarStyle}"
-            ShowMonthPicker="False"
-            ShowYearPicker="False"
-            HorizontalOptions="Center" 
-            >
+                    x:Name="Calendar1"
+                    Grid.Row="2"  
+                    Grid.Column="0" 
+                    Grid.ColumnSpan="2"
+                    Events="{Binding Events}"
+                    DayTappedCommand="{Binding DayTappedCommand}"
+                    Style="{StaticResource CalendarStyle}"
+                    ShowMonthPicker="False"
+                    ShowYearPicker="False"
+                    HorizontalOptions="Center">
                     <controls:Calendar.EventTemplate>
                         <DataTemplate>
                             <Frame Style="{StaticResource FrameStyle}">
@@ -110,6 +116,12 @@
                                     <Label Text="{Binding StartDate}" Style="{StaticResource TimeStyle}"/>
                                     <Label Text="{Binding Name}" Style="{StaticResource TitleStyle}"/>
                                     <Label Text="{Binding Description}" Style="{StaticResource TitleStyle}"/>
+                                    <Button
+                                        ImageSource="icon_trash.png"
+                                        Style="{StaticResource MinorButtonStyle}"
+                                        IsVisible="{Binding IsDeleteButtonVisible}"
+                                        Clicked="OnRemoveClicked" 
+                                        CommandParameter="{Binding .}" />
                                 </StackLayout>
                             </Frame>
                         </DataTemplate>
@@ -117,31 +129,29 @@
                 </controls:Calendar>
             </Grid>
         </StackLayout>
-        <Button x:Name="AddEvent"
+        <Button
+            x:Name="AddEvent"
             ImageSource="icon_add_calendar.png"
             BackgroundColor="Transparent"
             Style="{StaticResource FloadButtonStyle}"
             AbsoluteLayout.LayoutBounds="0.93, 0.94, 50, 50"
-            AbsoluteLayout.LayoutFlags="PositionProportional"  
-                />
+            AbsoluteLayout.LayoutFlags="PositionProportional" />
         <Switch 
             AbsoluteLayout.LayoutBounds="1, 0, 0.2, 0.1"
-            AbsoluteLayout.LayoutFlags="SizeProportional"        
+            AbsoluteLayout.LayoutFlags="SizeProportional"
             x:Name="SoundSwitcher" 
             VerticalOptions="End"
             Style="{StaticResource ToggleButtonStyle}"
             IsToggled="{Binding SoundSwitcher}"
-            IsVisible="{Binding CalendarSectionShown}"                    
-                    />
+            IsVisible="{Binding CalendarSectionShown}" />
         <Switch 
             AbsoluteLayout.LayoutBounds="1, 0, 0.2, 0.1"
-            AbsoluteLayout.LayoutFlags="All"        
-            x:Name="ThemeSwitcher" 
+            AbsoluteLayout.LayoutFlags="All"
+            x:Name="ThemeSwitcher"
             VerticalOptions="End"
             Style="{StaticResource ToggleButtonStyle}"
             IsToggled="{Binding ThemeSwitcher}"
-            IsVisible="{Binding CalendarSectionShown}"                    
-                    />
+            IsVisible="{Binding CalendarSectionShown}" />
 
 
 
